feat: Platform 엔티티 추가, connectedRoom 생성 로직 이동, flyway v2 추가, manual.sql 추가